feat: criação do cabeçalho e menu

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 10px;
+  /* font-size: 10px; */
 
   color: rgba(255, 255, 255, 0.87);
   background-color: #ddddddf3;
