--- a/client/src/components/forms/style.forms.css
+++ b/client/src/components/forms/style.forms.css
@@ -1,17 +1,16 @@
 .form-label {
-  font-size: 2.2rem;
+  font-size: 19px;
   font-weight: 500;
 }
 
-input.form-control,
-select.form-select {
-  padding: 1.1rem 0.75rem;
-  font-size: 1.5rem;
+input.form-control {
+  padding: 10px 7.5px;
+  font-size: 15px;
 }
 
 button.btn {
-  padding: 0.6rem 1.2rem;
-  font-size: 1.5rem;
+  /* padding: 0.6rem 1.2rem; */
+  /* font-size: 1.5rem; */
 }
 
 .mb-3 {
