--- a/client/src/components/forms/style.forms.css
+++ b/client/src/components/forms/style.forms.css
@@ -3,14 +3,10 @@
   font-weight: 500;
 }
 
-input.form-control {
+input.form-control,
+button.btn {
   padding: 10px 7.5px;
   font-size: 15px;
-}
-
-button.btn {
-  /* padding: 0.6rem 1.2rem; */
-  /* font-size: 1.5rem; */
 }
 
 .mb-3 {
