--- a/client/src/components/forms/style.forms.css
+++ b/client/src/components/forms/style.forms.css
@@ -4,8 +4,9 @@
 }
 
 input.form-control,
-button.btn {
-  padding: 10px 7.5px;
+button.btn,
+.form-select {
+  padding: 10px 7.5px !important;
   font-size: 15px;
 }
 
@@ -28,6 +29,10 @@ div.marginFormat {
   border-radius: 10px;
   box-shadow: 0px 1px 5px #000;
   padding: 20px;
+}
+
+.col {
+  margin-bottom: 10px;
 }
 
 .labelSection {
