--- a/client/src/components/header/index.header-style.css
+++ b/client/src/components/header/index.header-style.css
@@ -2,7 +2,6 @@ aside {
   min-height: 100vh;
   background-color: rgb(32, 34, 37);
   transition: all 0.3s ease 0s;
-  overflow-x: hidden;
   padding-left: 20px;
 }
 
@@ -12,7 +11,6 @@ aside.closeMenu {
 
 aside.menuOpen {
   width: 200px;
-  position: absolute;
 }
 
 button.menuOpener {
@@ -58,6 +56,7 @@ nav ul {
 nav li {
   width: 200px;
   margin-bottom: 20px;
+  list-style: none;
 }
 
 li a {
