--- a/client/src/components/section-filter/index.section-filter.css
+++ b/client/src/components/section-filter/index.section-filter.css
@@ -1,14 +1,14 @@
 .section-filter {
   padding: 35px 10px;
-  padding-bottom: 35px;
   border-bottom: 1px solid #00000047;
   border-top: 1px solid #00000047;
 }
 
 .input-filter {
+  width: 40%;
+  min-width: 150px;
   padding: 6px 10px;
   font-size: 17px;
-  width: 39%;
   font-family: monospace;
   font-weight: 600;
   text-transform: uppercase;
