feat: alteração no meu para coreção de bug de texto visiveis

--- a/client/src/components/header/index.header-style.css
+++ b/client/src/components/header/index.header-style.css
@@ -73,6 +73,14 @@ li a:hover {
   color: #ffffffd3;
 }
 
+span.textLink {
+  opacity: 0;
+}
+
+span.textLinkOpen {
+  opacity: 1;
+}
+
 svg {
   font-size: 30px;
   color: #ffffffd3;
