--- a/client/src/components/section-filter/index.section-filter.css
+++ b/client/src/components/section-filter/index.section-filter.css
@@ -2,6 +2,10 @@
   padding: 35px 10px;
   border-bottom: 1px solid #00000047;
   border-top: 1px solid #00000047;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .input-filter {
