fix: bug do textos do menu podendo ser 'clikcado' quando está fechado

--- a/client/src/components/header/index.header-style.css
+++ b/client/src/components/header/index.header-style.css
@@ -74,10 +74,12 @@ li a:hover {
 }
 
 span.textLink {
+  display: none;
   opacity: 0;
 }
 
 span.textLinkOpen {
+  display: block;
   opacity: 1;
 }
 
